// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header fetches data and renders correctly 1`] = `
<div>
  <div
    class="sc-AxmLO iyRexG"
  >
    <span
      class="sc-fzpans iEVhKc"
      data-testid="loading"
    >
      Loading data...
    </span>
  </div>
</div>
`;

exports[`Header fetches data and renders correctly 2`] = `
<div>
  <div
    class="sc-AxmLO iyRexG"
  >
    <div
      class="sc-fzozJi csyUvS"
    >
      <div
        class="sc-AxhUy cuOvzs"
      >
        <label
          class="sc-AxgMl fxzWMk"
        >
          Filter by
        </label>
        <select
          class="sc-AxheI dXBtZm"
          data-testid="filter"
        >
          <option
            class="sc-Axmtr hBVTto"
            value="WEEK"
          >
            WEEK
          </option>
          <option
            class="sc-Axmtr hBVTto"
            value="MONTH"
          >
            MONTH
          </option>
          <option
            class="sc-Axmtr hBVTto"
            value="QUARTER"
          >
            QUARTER
          </option>
          <option
            class="sc-Axmtr hBVTto"
            value="YEAR"
          >
            YEAR
          </option>
        </select>
      </div>
    </div>
    <div
      class="sc-fzoLsD kiZmwC"
      data-testid="cards"
    >
      <div
        class="sc-AxjAm chaqBE"
      >
        <h4
          class="sc-AxirZ jfgKYb"
        >
          Active sourcing
        </h4>
        <p
          class="sc-AxiKw jIhbQX"
        >
          45
        </p>
        <span
          class="sc-AxhCb gbPKbT"
        >
          30 Last period
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header fetches data and renders correctly 3`] = `<div />`;

exports[`Header shows an error message when fetch data with a failed status 1`] = `
<div>
  <div
    class="sc-AxmLO iyRexG"
  >
    <div
      class="sc-fzozJi csyUvS"
    >
      <div
        class="sc-AxhUy cuOvzs"
      >
        <label
          class="sc-AxgMl fxzWMk"
        >
          Filter by
        </label>
        <select
          class="sc-AxheI dXBtZm"
          data-testid="filter"
        >
          <option
            class="sc-Axmtr hBVTto"
            value="WEEK"
          >
            WEEK
          </option>
          <option
            class="sc-Axmtr hBVTto"
            value="MONTH"
          >
            MONTH
          </option>
          <option
            class="sc-Axmtr hBVTto"
            value="QUARTER"
          >
            QUARTER
          </option>
          <option
            class="sc-Axmtr hBVTto"
            value="YEAR"
          >
            YEAR
          </option>
        </select>
      </div>
    </div>
    <span
      class="sc-fzplWN jFvDHN"
      data-testid="error"
    >
      An error occurred when fetch the cards list, please try again.
    </span>
  </div>
</div>
`;

exports[`Header shows an error message when fetch data with a failed status 2`] = `<div />`;

exports[`Header shows an error message when promise gets rejected 1`] = `
<div>
  <div
    class="sc-AxmLO iyRexG"
  >
    <div
      class="sc-fzozJi csyUvS"
    >
      <div
        class="sc-AxhUy cuOvzs"
      >
        <label
          class="sc-AxgMl fxzWMk"
        >
          Filter by
        </label>
        <select
          class="sc-AxheI dXBtZm"
          data-testid="filter"
        >
          <option
            class="sc-Axmtr hBVTto"
            value="WEEK"
          >
            WEEK
          </option>
          <option
            class="sc-Axmtr hBVTto"
            value="MONTH"
          >
            MONTH
          </option>
          <option
            class="sc-Axmtr hBVTto"
            value="QUARTER"
          >
            QUARTER
          </option>
          <option
            class="sc-Axmtr hBVTto"
            value="YEAR"
          >
            YEAR
          </option>
        </select>
      </div>
    </div>
    <span
      class="sc-fzplWN jFvDHN"
      data-testid="error"
    >
      An error occurred when fetch the cards list, please try again.
    </span>
  </div>
</div>
`;

exports[`Header shows an error message when promise gets rejected 2`] = `<div />`;
